Fix jk spacing on test files

--- a/public/styles/adm.less
+++ b/public/styles/adm.less
@@ -30,8 +30,8 @@ a:hover { text-decoration:none }
 .btn { background:@orange;
 	color:white;
 	border:none;
-	padding:8px 20px;f
-	ont-size:18px }
+	padding:8px 20px;
+	font-size:18px }
 .btn:hover { font-weight:bold;color:white }
 
 .gradientfill {
